--- a/css/marshall.css
+++ b/css/marshall.css
@@ -378,6 +378,14 @@ h1 a {
 .desktop .configure-btn:hover {
   background: url("../images/priceconfigure-btn.png") left bottom no-repeat;
 }
+.desktop .configure-btn.small-btn {
+  width: 167px;
+  height: 33px;
+  background: url("../images/priceconfigure-small-btn.png") left top no-repeat;
+}
+.desktop .configure-btn.small-btn:hover {
+  background: url("../images/priceconfigure-small-btn.png") left bottom no-repeat;
+}
 
 .mobile .big-link {
   position: relative;
@@ -549,20 +557,22 @@ h1 a {
 /* homepage hero heading */
 /* ================================================ */
 .main-heading {
-  background-color: #dcdcdc;
-  color: #444;
-  /*padding: 8px 16px;*/
+  color: #001748;
+  padding: 5px 10px 8px 12px;
+}
+
+.mobile .main-heading {
   text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.5);
-  height: 60px;
 }
 
 .main-heading h2 {
-  font-size: 1.8em;
+  font-size: 25px;
 }
 
 .main-heading.hero {
   background: url("../images/home_title_grad.png") top right repeat-y #001649;
   text-shadow: none;
+  height: 60px;
 }
 
 .main-heading.hero h2 {
@@ -758,19 +768,45 @@ h1 a {
   top: 15px;
 }
 
-.sidebox.configure {
-  padding-bottom: 50px;
-  position: relative;
-}
-
 .sidebox.configure p {
   padding: 10px;
 }
+.sidebox.configure.configure .more {
+  background-color: #dcdcdc;
+  padding: 7px 10px;
+  min-height: 35px;
+}
 
-.sidebox.configure .big-link {
-  position: absolute;
-  bottom: 15px;
-  right: 15px;
+.breadcrumb {
+  width: 960px;
+  margin: 0 auto;
+}
+.breadcrumb:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.breadcrumb ul {
+  float: right;
+  margin: 0;
+  padding: 10px 0 0 0;
+  list-style: none;
+}
+.breadcrumb ul li {
+  float: left;
+  color: #88898b;
+  font-weight: bold;
+  font-size: 12px;
+  padding: 0 3px;
+}
+.breadcrumb ul li a {
+  text-decoration: none;
+  color: #88898b;
+  font-size: 12px;
+  font-weight: bold;
+}
+.breadcrumb ul li a:hover {
+  text-decoration: underline;
 }
 
 /* news page */
@@ -779,9 +815,12 @@ h1 a {
 }
 
 .news-page-navigation.bottom {
-  border-top: 1px solid #eaeaea;
   margin-top: -20px;
   margin-bottom: 20px;
+}
+
+.desktop .news-page-navigation.bottom ul {
+  display: none;
 }
 
 .news-page-navigation:after {
@@ -805,11 +844,18 @@ h1 a {
 .news-page-navigation ul li a {
   display: block;
   background-color: #fff;
-  border: 1px solid #ccc;
+  border: 1px solid #eee;
   color: #666;
+  padding: 4px 5px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 11px;
+}
+
+.mobile .news-page-navigation ul li a {
+  border: 1px solid #ccc;
   padding: 0 10px;
   line-height: 28px;
-  text-align: center;
   text-decoration: none;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
@@ -817,12 +863,17 @@ h1 a {
 }
 
 .news-page-navigation ul li a:hover {
-  color: #444;
+  background-color: #001848;
+  color: #fff;
 }
 
 .news-page-navigation ul li a.active {
   color: #000;
   background-color: #eaeaea;
+}
+.news-page-navigation ul li a.active:hover {
+  background-color: #001848;
+  color: #fff;
 }
 
 .news-items {
@@ -836,7 +887,7 @@ h1 a {
 }
 
 .news-items ol li {
-  border-top: 1px solid #ececec;
+  border-bottom: 1px solid #ececec;
   padding: 15px 0;
   position: relative;
 }
@@ -848,11 +899,11 @@ h1 a {
 }
 
 .news-items ol li .detail {
-  padding-left: 85px;
+  padding-left: 90px;
 }
 
 .news-items ol li .detail a {
-  color: #217cc9;
+  color: #4b4b4a;
   text-decoration: none;
   text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.5);
 }
@@ -870,10 +921,10 @@ h1 a {
 .news-items ol li .detail .date,
 .news-detail .date {
   color: #333;
-  font-weight: bold;
   line-height: 140%;
   font-size: 0.9em;
   margin-bottom: 5px;
+  font-style: italic;
 }
 
 .news-detail {
@@ -1550,8 +1601,21 @@ h1 a {
 /* media queries */
 /* ================================================ */
 @media only screen and (max-width: 1000px) {
+  body {
+    background: #ececec;
+  }
+
   .page {
     width: 100%;
+  }
+
+  .header {
+    height: 100px;
+    background: #bb1f1d;
+  }
+
+  .breadcrumb {
+    display: none;
   }
 
   h1 {
@@ -1619,9 +1683,24 @@ h1 a {
     margin-left: 0;
   }
 
-  .sidebox {
+  .sidebox-3 .sidebox {
     float: left;
     width: 33.33%;
+  }
+
+  .sidebox-2 .sidebox {
+    float: left;
+    width: 50%;
+  }
+  .sidebox-2 .sidebox.configure {
+    position: relative;
+  }
+  .sidebox-2 .sidebox.configure .more {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    box-sizing: border-box;
   }
 
   .sidebox.news {
@@ -1713,8 +1792,17 @@ h1 a {
     font-size: 3.5em;
   }
 
-  .sidebox {
+  .sidebox-3 .sidebox {
     width: 50%;
+  }
+
+  .sidebox-2 .sidebox {
+    width: 50%;
+  }
+
+  .sidebox-3 .sidebox.news,
+  .sidebox-2 .sidebox.news {
+    width: 100%;
   }
 
   .main-heading {
@@ -1812,10 +1900,6 @@ h1 a {
 }
 /* mobile portrait */
 @media only screen and (max-width: 400px) {
-  body {
-    background: url("../images/top-gradient.png") left -25px repeat-x #ececec;
-  }
-
   p {
     font-size: 1.1em;
   }
@@ -1848,9 +1932,19 @@ h1 a {
     font-size: 2.5em;
   }
 
-  .sidebox {
+  .sidebox-3 .sidebox,
+  .sidebox-2 .sidebox {
     width: 100%;
     float: none;
+  }
+
+  .sidebox-2 .sidebox.configure {
+    position: relative;
+  }
+  .sidebox-2 .sidebox.configure .more {
+    position: static;
+    width: 100%;
+    box-sizing: border-box;
   }
 
   .carousel .copy h2,
