--- a/scss/marshall.scss
+++ b/scss/marshall.scss
@@ -932,10 +932,10 @@ h1 a {
     margin-bottom: 20px;
 }
 
-.desktop .news-page-navigation.bottom {
-  ul {
-    display: none;
-  }
+.news-page-navigation.bottom {
+    ul {
+        display: none;
+    }
 }
 
 .news-page-navigation:after {
@@ -966,20 +966,6 @@ h1 a {
     text-decoration: none;
     font-size: 11px;
 }
-
-
-.mobile {
-    .news-page-navigation ul li a {
-        border: 1px solid #ccc;
-        padding: 0 10px;
-        line-height: 28px;
-        text-decoration: none;
-        -webkit-border-radius: 3px;
-        -moz-border-radius: 3px;
-        border-radius: 3px;
-    }
-}
-
 
 
 .news-page-navigation ul li a:hover {
@@ -1051,19 +1037,110 @@ h1 a {
     font-style: italic;
 }
 
-.news-detail {
+.news-detail .date {
+    font-size: 1.1em;
+}
+/* -- */
+
+
+
+.content-detail {
     background-color: #fff;
     padding: 15px;
 }
 
-.news-detail .date {
-    font-size: 1.1em;
+.content-detail {
+  p {
+    padding-bottom: 10px;
+    line-height: 150%;
+    font-size: 12px;
+  }
+
+  a {
+    color: #4b4b4a;
+    font-size: 12px;
+
+    &:hover {
+      text-decoration: none;
+    }
+  }
+
+  .bullets {
+    list-style: none;
+    margin: 0 0 10px 0;
+    padding: 0 0 0 20px;
+      li {
+        background: url('../images/bullet_point.png') no-repeat 0 0;
+        padding-left: 25px;
+        margin: 3px 0;
+        font-size: 12px;
+        padding-bottom: 3px;
+      }
+  }
 }
 
-.news-detail p {
-    padding-bottom: 10px;
+.gallery {
+  h2 {
+    font-size: 18px;
+    color: #001748;
+    margin: 0 0 10px 0;
+    padding: 0 0 5px 0;
+    border-bottom: solid 1px #ccc;
+  }
+  ol {
+    list-style: none;
+    margin: 0;
+    padding: 0 0 25px 0;
+    float: left;
+
+    li {
+      float: left;
+      width: 70px;
+      height: 55px;
+      margin: 5px;
+    }
+  }
 }
-/* -- */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -1865,18 +1942,27 @@ h1 a {
          width: 50%;
 
          &.configure {
-            position: relative;
+              position: relative;
 
-            .more {
-              position: absolute;
-              bottom: 0;
-              left: 0;
-              width: 100%;
-              box-sizing: border-box;
-            }
+              .more {
+                  position: absolute;
+                  bottom: 0;
+                  left: 0;
+                  width: 100%;
+                  box-sizing: border-box;
+              }
          }
     }
 
+    .news-page-navigation ul li a {
+          border: 1px solid #ccc;
+          padding: 0 10px;
+          line-height: 28px;
+          text-decoration: none;
+          -webkit-border-radius: 3px;
+          -moz-border-radius: 3px;
+          border-radius: 3px;
+    }
 
     .sidebox.news {
         clear: left;
@@ -1916,6 +2002,12 @@ h1 a {
         font-size: 1.0em;
         line-height: 140%;
     }
+
+  .news-page-navigation.bottom {
+    ul {
+        display: block;
+    }
+  }
 
 
 }
