--- a/css/marshall.css
+++ b/css/marshall.css
@@ -357,9 +357,11 @@ h1 a {
   cursor: pointer;
   text-align: left;
   text-decoration: none;
+  display: block;
+  clear: both;
 }
 .desktop .big-link.blue-link {
-  background: url("../images/btn-more.png") no-repeat;
+  background: url("../images/btn-more.png") 0 0 no-repeat;
 }
 .desktop .big-link.blue-link:hover {
   color: #fff;
@@ -404,6 +406,7 @@ h1 a {
   -moz-border-radius: 6px;
   border-radius: 6px;
   cursor: pointer;
+  clear: both;
 }
 .mobile .red-link {
   background: #BB1F1D;
@@ -422,7 +425,6 @@ h1 a {
   background-image: linear-gradient(to bottom, #f20e08, #f71102);
 }
 .mobile .blue-link {
-  padding: 5px 8px;
   background: #001649;
   color: #fff000;
 }
@@ -918,7 +920,8 @@ h1 a {
 }
 
 .news-detail .date {
-  font-size: 1.1em;
+  font-size: 12px;
+  font-weight: bold;
 }
 
 /* -- */
@@ -931,6 +934,28 @@ h1 a {
   padding-bottom: 10px;
   line-height: 150%;
   font-size: 12px;
+}
+.content-detail img.responsive {
+  margin-bottom: 15px;
+}
+.content-detail img.float-left {
+  float: left;
+}
+.content-detail img.float-right {
+  float: right;
+}
+.content-detail img.shadow {
+  -webkit-box-shadow: 0px 6px 5px -2px #575657;
+  -moz-box-shadow: 0px 6px 5px -2px #575657;
+  box-shadow: 0px 6px 5px -2px #575657;
+}
+.content-detail img.set-of-two {
+  width: 45% !important;
+}
+.content-detail .content-copy:after {
+  content: "";
+  display: table;
+  clear: both;
 }
 .content-detail a {
   color: #4b4b4a;
@@ -963,6 +988,7 @@ h1 a {
   list-style: none;
   margin: 0;
   padding: 0 0 25px 0;
+  width: 100%;
   float: left;
 }
 .gallery ol li {
@@ -2056,6 +2082,20 @@ h1 a {
     margin-bottom: 5px;
   }
 
+  /* news detail */
+  .content-detail img.responsive {
+    width: 100% !important;
+  }
+  .content-detail img.float-left {
+    float: none;
+  }
+  .content-detail img.float-right {
+    float: none;
+  }
+  .content-detail img.set-of-two {
+    width: 100% !important;
+  }
+
   #configure-machine select {
     width: 100%;
   }
@@ -2063,10 +2103,6 @@ h1 a {
   /* configures steps */
   #config_machine .step {
     font-size: 1.2em;
-  }
-
-  .news-detail img {
-    width: 100%;
   }
 
   #basket {
