General refactor - Header and Footer

--- a/css/marshall.css
+++ b/css/marshall.css
@@ -171,6 +171,7 @@ h1 a {
   padding: 0;
   list-style: none;
   float: left;
+  width: 100%;
 }
 
 .main-nav ul:after {
@@ -185,8 +186,7 @@ h1 a {
   background: url("../images/nav-divider.png") bottom right no-repeat;
 }
 
-.main-nav ul li.last-child {
-  padding-right: 0;
+.main-nav ul li.no-bg {
   background: none;
 }
 
@@ -201,12 +201,7 @@ h1 a {
   padding: 0 12px;
 }
 
-.main-nav ul li.search {
-  width: 89px;
-}
-
 .main-nav ul li.facebook {
-  width: 32px;
   float: right;
 }
 
@@ -214,6 +209,8 @@ h1 a {
   text-indent: -9000px;
   background: url("../images/fb-icon.png") center center no-repeat;
   width: 32px;
+  padding: 0;
+  margin-right: 4px;
 }
 
 .main-nav ul li.hover a,
@@ -575,6 +572,7 @@ h1 a {
   background: url("../images/home_title_grad.png") top right repeat-y #001649;
   text-shadow: none;
   height: 60px;
+  padding: 0;
 }
 
 .main-heading.hero h2 {
@@ -1554,10 +1552,14 @@ h1 a {
 
 .made-by {
   clear: both;
-  background-color: #dcdcdc;
+  background-color: #ececec;
   padding: 10px;
   margin-top: 10px;
   color: #407f12;
+}
+
+.mobile .made-by {
+  background-color: #dcdcdc;
 }
 
 .made-by p {
@@ -1807,6 +1809,10 @@ h1 a {
   p {
     font-size: 1.0em;
     line-height: 140%;
+  }
+
+  .main-heading.hero {
+    height: auto;
   }
 
   .news-page-navigation.bottom ul {
