--- a/css/marshall.css
+++ b/css/marshall.css
@@ -304,7 +304,7 @@ h1 a {
 }
 
 #mobile-nav .header span {
-  color: #ccc;
+  color: #fff;
   font-size: 4.5em;
   display: block;
   text-decoration: none;
@@ -327,6 +327,7 @@ h1 a {
 
 #mobile-nav ul li a {
   display: block;
+  font-weight: bold;
   padding: 18px 16px;
   font-size: 1.2em;
   color: #fff;
@@ -340,6 +341,9 @@ h1 a {
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.5), inset 0px 0px 1px rgba(255, 255, 255, 0.5);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.5), inset 0px 0px 1px rgba(255, 255, 255, 0.5);
   text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.7), 0px 1px 0px rgba(255, 255, 255, 0.3);
+}
+#mobile-nav ul li a:active, #mobile-nav ul li a.active {
+  background: #0f82ff;
 }
 
 /* buttons */
@@ -949,11 +953,19 @@ h1 a {
 }
 .content-detail img.set-of-two {
   width: 45% !important;
+  margin-bottom: 15px;
 }
 .content-detail .content-copy:after {
   content: "";
   display: table;
   clear: both;
+}
+.content-detail .content-copy h2 {
+  font-size: 18px;
+  color: #001748;
+  margin: 0 0 10px 0;
+  padding: 0 0 5px 0;
+  border-bottom: solid 1px #ccc;
 }
 .content-detail a {
   color: #4b4b4a;
