--- a/scss/marshall.scss
+++ b/scss/marshall.scss
@@ -316,7 +316,7 @@ h1 a {
 }
 
 #mobile-nav .header span {
-    color: #ccc;
+    color: #fff;
     font-size: 4.5em;
     display: block;
     text-decoration: none;
@@ -339,6 +339,7 @@ h1 a {
 
 #mobile-nav ul li a {
     display: block;
+    font-weight: bold;
     padding: 18px 16px;
     font-size: 1.2em;
     color: #fff;
@@ -367,6 +368,11 @@ h1 a {
     text-shadow:
         0px -1px 0px rgba(000,000,000,0.7),
         0px 1px 0px rgba(255,255,255,0.3);
+
+    &:active,
+    &.active {
+        background: #0f82ff;
+    }
 }
 
 
@@ -1051,36 +1057,48 @@ h1 a {
 }
 
 .content-detail {
-  p {
-    padding-bottom: 10px;
-    line-height: 150%;
-    font-size: 12px;
-  }
-  img {
-    &.responsive {
-      margin-bottom: 15px;
+    p {
+        padding-bottom: 10px;
+        line-height: 150%;
+        font-size: 12px;
     }
-    &.float-left {
-      float: left;
+    img {
+        &.responsive {
+            margin-bottom: 15px;
+        }
+        &.float-left {
+            float: left;
+        }
+        &.float-right {
+            float: right;
+        }
+        &.shadow {
+            -webkit-box-shadow: 0px 6px 5px -2px rgba(87,86,87,1);
+            -moz-box-shadow: 0px 6px 5px -2px rgba(87,86,87,1);
+            box-shadow: 0px 6px 5px -2px rgba(87,86,87,1);
+        }
+        &.set-of-two {
+            width: 45% !important;
+            margin-bottom: 15px;
+        }
     }
-    &.float-right {
-      float: right;
-    }
-    &.shadow {
-      -webkit-box-shadow: 0px 6px 5px -2px rgba(87,86,87,1);
-      -moz-box-shadow: 0px 6px 5px -2px rgba(87,86,87,1);
-      box-shadow: 0px 6px 5px -2px rgba(87,86,87,1);
-    }
-    &.set-of-two {
-      width: 45% !important;
-    }
-  }
 
-  .content-copy:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
+    .content-copy {
+        &:after {
+            content: "";
+            display: table;
+            clear: both;
+
+        }
+
+        h2 {
+            font-size: 18px;
+            color: #001748;
+            margin: 0 0 10px 0;
+            padding: 0 0 5px 0;
+            border-bottom: solid 1px #ccc;
+        }
+    }
 
 
   a {
