--- a/css/marshall.css
+++ b/css/marshall.css
@@ -925,6 +925,19 @@ h1 a {
   font-size: 12px;
   font-weight: bold;
 }
+.news-detail .big-link {
+  margin-top: 30px;
+}
+
+.mobile .news-detail {
+  text-align: right;
+}
+.mobile .news-detail .content-copy {
+  text-align: left;
+}
+.mobile .news-detail .big-link {
+  margin-top: 10px;
+}
 
 /* -- */
 .content-detail {
