--- a/css/marshall.css
+++ b/css/marshall.css
@@ -394,20 +394,20 @@ h1 a {
   position: relative;
   display: inline-block;
   color: #fff;
-  padding: 7px 9px;
-  border: 2px solid #fff;
-  -moz-box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.7);
-  -webkit-box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.7);
-  box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.7);
+  padding: 9px 14px;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
   text-decoration: none;
-  font-size: 0.9em;
+  font-size: 1.0em;
   font-weight: bold;
   letter-spacing: 2px;
-  -webkit-border-radius: 6px;
-  -moz-border-radius: 6px;
-  border-radius: 6px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
   cursor: pointer;
   clear: both;
+  text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.7), 0px 1px 0px rgba(255, 255, 255, 0.3);
 }
 .mobile .red-link {
   background: #BB1F1D;
@@ -417,7 +417,7 @@ h1 a {
   background-image: -o-linear-gradient(top, #bb1f1d, #d20805);
   background-image: linear-gradient(to bottom, #bb1f1d, #d20805);
 }
-.mobile .red-link:hover {
+.mobile .red-link:active, .mobile .red-link:hover {
   background: #F20E08;
   background-image: -webkit-linear-gradient(top, #f20e08, #f71102);
   background-image: -moz-linear-gradient(top, #f20e08, #f71102);
@@ -427,10 +427,10 @@ h1 a {
 }
 .mobile .blue-link {
   background: #001649;
-  color: #fff000;
-}
-.mobile .blue-link:hover {
   color: #fff;
+}
+.mobile .blue-link:active, .mobile .blue-link:hover {
+  background: #0f82ff;
 }
 
 .read-more {
@@ -1473,6 +1473,10 @@ h1 a {
   background: #dcdcdc;
 }
 
+.mobile .minibox .more {
+  padding: 10px 12px;
+}
+
 .minibox .copy p {
   padding: 7px 12px;
   line-height: 140%;
@@ -1831,11 +1835,6 @@ h1 a {
     line-height: 140%;
   }
 
-  p {
-    font-size: 1.0em;
-    line-height: 140%;
-  }
-
   .main-heading.hero {
     height: auto;
   }
@@ -1856,23 +1855,6 @@ h1 a {
 
   .main-heading.hero {
     background: #001649;
-  }
-
-  .big-link {
-    position: relative;
-    display: inline-block;
-    color: #fff;
-    padding: 8px 12px;
-    border: none;
-    -moz-box-shadow: none;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    font-size: 0.9em;
-    font-weight: bold;
-    letter-spacing: 2px;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
   }
 
   h1 {
@@ -2002,10 +1984,6 @@ h1 a {
 }
 /* mobile portrait */
 @media only screen and (max-width: 400px) {
-  p {
-    font-size: 1.1em;
-  }
-
   .header,
   #mobile-nav .header {
     height: 75px;
