--- a/scss/marshall.scss
+++ b/scss/marshall.scss
@@ -410,7 +410,6 @@ h1 a {
         height: 43px;
     }
 
-
     .configure-btn {
         display: block;
         background: url('../images/priceconfigure-btn.png') left top no-repeat;
@@ -432,32 +431,27 @@ h1 a {
             }
         }
     }
-
 }
 
-
-
-
 .mobile {
-
     .big-link {
         position: relative;
         display: inline-block;
         color: #fff;
-        padding: 7px 9px;
-        border: 2px solid #fff;
-        -moz-box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.70);
-        -webkit-box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.70);
-        box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.70);
+        padding: 9px 14px;
+        -moz-box-shadow: none;
+        -webkit-box-shadow: none;
+        box-shadow: none;
         text-decoration: none;
-        font-size: 0.9em;
+        font-size: 1.0em;
         font-weight: bold;
         letter-spacing: 2px;
-        -webkit-border-radius: 6px;
-        -moz-border-radius: 6px;
-        border-radius: 6px;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        border-radius: 3px;
         cursor: pointer;
         clear: both;
+        text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.7), 0px 1px 0px rgba(255, 255, 255, 0.3);
     }
 
     .red-link {
@@ -467,27 +461,29 @@ h1 a {
         background-image: -ms-linear-gradient(top, #BB1F1D, #D20805);
         background-image: -o-linear-gradient(top, #BB1F1D, #D20805);
         background-image: linear-gradient(to bottom, #BB1F1D, #D20805);
-    }
 
-    .red-link:hover {
-        background: #F20E08;
-        background-image: -webkit-linear-gradient(top, #F20E08, #F71102);
-        background-image: -moz-linear-gradient(top, #F20E08, #F71102);
-        background-image: -ms-linear-gradient(top, #F20E08, #F71102);
-        background-image: -o-linear-gradient(top, #F20E08, #F71102);
-        background-image: linear-gradient(to bottom, #F20E08, #F71102);
+        &:active,
+        &:hover {
+            background: #F20E08;
+            background-image: -webkit-linear-gradient(top, #F20E08, #F71102);
+            background-image: -moz-linear-gradient(top, #F20E08, #F71102);
+            background-image: -ms-linear-gradient(top, #F20E08, #F71102);
+            background-image: -o-linear-gradient(top, #F20E08, #F71102);
+            background-image: linear-gradient(to bottom, #F20E08, #F71102);
+        }
     }
 
     .blue-link {
         background: #001649;
-        color: #fff000;
-    }
-
-    .blue-link:hover {
         color: #fff;
-    }
 
+        &:active,
+        &:hover {
+            background: #0f82ff;
+        }
+    }
 }
+
 
 .read-more {
     text-decoration: underline !important;
@@ -1674,6 +1670,14 @@ h1 a {
     background: #dcdcdc;
 }
 
+.mobile {
+    .minibox {
+        .more {
+            padding: 10px 12px;
+        }
+    }
+}
+
 .minibox .copy p {
     padding: 7px 12px;
     line-height: 140%;
@@ -1952,8 +1956,6 @@ h1 a {
     }
 
 
-
-
     /* step 5 */
     #config_machine .email-option select {
         margin-right: 40px;
@@ -1973,7 +1975,6 @@ h1 a {
         margin-left: 0;
         clear: left;
     }
-
 }
 
 
@@ -2068,11 +2069,6 @@ h1 a {
         line-height: 140%;
     }
 
-    p {
-        font-size: 1.0em;
-        line-height: 140%;
-    }
-
     .main-heading.hero {
         height: auto;
     }
@@ -2101,25 +2097,6 @@ h1 a {
     .main-heading.hero {
         background: #001649;
     }
-
-    .big-link {
-        position: relative;
-        display: inline-block;
-        color: #fff;
-        padding: 8px 12px;
-        border: none;
-        -moz-box-shadow: none;
-        -webkit-box-shadow: none;
-        box-shadow: none;
-        font-size: 0.9em;
-        font-weight: bold;
-        letter-spacing: 2px;
-        -webkit-border-radius: 4px;
-        -moz-border-radius: 4px;
-        border-radius: 4px;
-    }
-
-
 
     h1 {
         padding-top: 15px;
@@ -2255,10 +2232,6 @@ h1 a {
 
 /* mobile portrait */
 @media only screen and (max-width: 400px){
-
-    p {
-        font-size: 1.1em;
-    }
 
     .header,
     #mobile-nav .header {
