--- a/css/marshall.css
+++ b/css/marshall.css
@@ -477,13 +477,6 @@ h1 a {
   /*-moz-box-shadow: 0 8px 6px -6px #ccc;*/
   /*box-shadow: 0 8px 6px -6px #ccc;*/
 }
-
-.mainbox:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
 .mainbox h2 {
   font-size: 1.3em;
   line-height: 110%;
@@ -504,6 +497,11 @@ h1 a {
   margin-bottom: 20px;
   background-color: #fff;
 }
+.sidebox:after {
+  content: "";
+  display: table;
+  clear: both;
+}
 
 .sidebox h3 {
   color: #fff;
@@ -516,7 +514,7 @@ h1 a {
   display: block;
 }
 
-.sidebox img {
+.sidebox > img {
   width: 100%;
 }
 
@@ -1574,7 +1572,6 @@ h1 a {
   display: block;
   float: left;
   padding: 10px 15px;
-  background: #fff;
   text-decoration: none;
   color: #000;
   border: 1px solid #ccc;
@@ -1584,73 +1581,83 @@ h1 a {
   margin-top: 8px;
   font-size: 12px;
   background-color: #fff;
-  -webkit-transition: all 0.2s;
-  -moz-transition: all 0.2s;
-  -o-transition: all 0.2s;
-  transition: all 0.2s;
+  -webkit-transition: background 0.2s;
+  -moz-transition: background 0.2s;
+  -o-transition: background 0.2s;
+  transition: background 0.2s;
 }
 .container .tabs li a:hover {
   background-color: #f7f7f7;
-  -webkit-transition: all 0.2s;
-  -moz-transition: all 0.2s;
-  -o-transition: all 0.2s;
-  transition: all 0.2s;
+  -webkit-transition: background 0.2s;
+  -moz-transition: background 0.2s;
+  -o-transition: background 0.2s;
+  transition: background 0.2s;
 }
-.container .tabs li a.active {
+.container .tabs li.active a {
   background-color: #fff;
   position: relative;
   bottom: 0;
   padding: 14px 18px;
-  background: #fff;
   color: #000;
   margin-top: 0;
   cursor: default;
-  -webkit-transition: all 0.2s;
-  -moz-transition: all 0.2s;
-  -o-transition: all 0.2s;
-  transition: all 0.2s;
 }
-.container .tabs li a.active:hover {
+.container .tabs li.active a:hover {
   background-color: #fff;
 }
-.container .tabs-content {
+.container .tabs .copy-block {
+  display: none;
+}
+.container .copy-block {
   background-color: #fff;
   padding: 15px;
-  clear: left;
+  min-height: 290px;
+  box-sizing: content-box;
   border: 1px solid #ccc;
   border-top: none;
 }
-.container .tabs-content .copy-block {
-  min-height: 290px;
-}
-.container .tabs-content .copy-block .feature-list {
+.container .copy-block .feature-list {
   margin: 0;
   padding: 0;
   list-style: none;
 }
-.container .tabs-content .copy-block .feature-list li {
+.container .copy-block .feature-list li {
   position: relative;
   padding-bottom: 10px;
 }
-.container .tabs-content .copy-block .feature-list li:after {
+.container .copy-block .feature-list li:after {
   content: "";
   clear: both;
   display: block;
 }
-.container .tabs-content .copy-block .feature-list li .thumb {
+.container .copy-block .feature-list li .thumb {
   position: absolute;
   left: 0;
   top: 0;
 }
-.container .tabs-content .copy-block .feature-list li .thumb img {
+.container .copy-block .feature-list li .thumb img {
   border: 1px solid #ccc;
   margin-bottom: 10px;
 }
-.container .tabs-content .copy-block .feature-list li .detail {
-  margin-left: 125px;
+.container .copy-block .feature-list li .detail {
+  margin-left: 115px;
   min-height: 80px;
   font-size: 12px;
   line-height: 140%;
+}
+.container .tabs-content {
+  clear: left;
+}
+
+.sidebox.gallery ul {
+  margin: 0;
+  padding: 0 0 0 2px;
+  list-style: none;
+  float: left;
+}
+.sidebox.gallery ul li {
+  float: left;
+  padding: 0 2px 4px 2px;
 }
 
 /* footer */
@@ -2001,6 +2008,69 @@ h1 a {
   .news-page-navigation.bottom ul {
     display: block;
   }
+
+  .container.product .product-image {
+    margin-right: 0;
+    width: 100%;
+    float: none;
+  }
+  .container.product .product-image .container {
+    margin-right: 0 !important;
+  }
+  .container.product .product-image .container img {
+    border-top: none;
+    width: 100%;
+  }
+  .container.product .product-details {
+    width: inherit;
+    float: none;
+    font-size: 12px;
+    line-height: 130%;
+  }
+  .container.product .product-details h3 {
+    color: #fff000;
+    background: #001748;
+    padding: 8px 10px;
+    font-size: 15px;
+  }
+  .container.product .product-details ul {
+    margin: 12px;
+  }
+  .container.product .product-details ul li {
+    padding: 5px 8px;
+    background-color: #ececec;
+    margin-bottom: 3px;
+  }
+  .container.product .product-details table {
+    margin: 0;
+    font-size: 12px;
+    width: 100%;
+    text-align: right;
+  }
+  .container.product .product-details table td, .container.product .product-details table th {
+    text-align: right;
+    vertical-align: top;
+    padding: 0 15px 5px 10px;
+  }
+  .container.product .product-details .button {
+    text-align: right;
+    padding: 10px;
+  }
+  .container.product .product-details .button:after {
+    content: "";
+    clear: both;
+    display: block;
+  }
+  .container.product .product-details .button a {
+    float: right;
+  }
+
+  .sidebox.gallery ul {
+    padding: 8px 0 0 8px;
+  }
+  .sidebox.gallery ul li {
+    padding: 0 8px 8px 0;
+  }
 }
 /* tablet portrait and mobile landscape */
 @media only screen and (max-width: 679px) {
@@ -2139,6 +2209,59 @@ h1 a {
 
   .carousel .bx-pager {
     float: none;
+  }
+
+  .mainbox.padded {
+    margin-top: 20px;
+  }
+
+  /* product page */
+  .container .tabs {
+    float: none;
+    width: 100%;
+    background: none;
+  }
+  .container .tabs li {
+    float: none;
+    padding: 0;
+  }
+  .container .tabs li a {
+    float: none;
+    padding: 10px 15px;
+    text-decoration: none;
+    border: none;
+    border-bottom: 1px solid #fff;
+    position: relative;
+    bottom: 0;
+    margin-top: 0;
+    font-size: 12px;
+    background-color: #dedede;
+  }
+  .container .tabs li.active a {
+    padding: 8px 10px;
+    color: #fff;
+    font-weight: bold;
+    background-color: #001e5a;
+    border: none;
+    font-size: 15px;
+  }
+  .container .tabs li.active a:hover {
+    color: #fff;
+    font-weight: bold;
+    background-color: #001e5a;
+  }
+  .container .tabs li.active .copy-block {
+    display: block;
+  }
+  .container .tabs .copy-block {
+    display: none;
+  }
+  .container .copy-block {
+    padding: 15px;
+    border: none;
+  }
+  .container .tabs-content {
+    display: none;
   }
 }
 /* mobile portrait */
